parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CLASS
    FLOAT_CONST
    FUNCTION
    INT_CONST
    RETURN
    owyar

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statements statement
Rule 2     statements -> statement
Rule 3     print_statement -> PRINT LPAREN expression RPAREN SEMICOL
Rule 4     print_statement -> PRINT LPAREN STRING RPAREN SEMICOL
Rule 5     vartype_statement -> VAR_TYPE LPAREN ID RPAREN SEMICOL
Rule 6     union_statement -> UNION LPAREN STRING COMMA STRING RPAREN SEMICOL
Rule 7     union_statement -> UNION LPAREN STRING COMMA ID RPAREN SEMICOL
Rule 8     union_statement -> UNION LPAREN ID COMMA STRING RPAREN SEMICOL
Rule 9     sizeof_statement -> SIZEOF LPAREN STRING RPAREN SEMICOL
Rule 10    sizeof_statement -> SIZEOF LPAREN ID RPAREN SEMICOL
Rule 11    statement -> expression SEMICOL
Rule 12    statement -> if_statement_elif
Rule 13    statement -> if_statement
Rule 14    statement -> while_statement
Rule 15    statement -> for_statement
Rule 16    statement -> vartype_statement
Rule 17    statement -> input_statement
Rule 18    statement -> union_statement
Rule 19    statement -> comparison
Rule 20    statement -> compare_id_value
Rule 21    statement -> compare_id_id
Rule 22    statement -> bool_comparison
Rule 23    statement -> var_statement
Rule 24    statement -> var_assign
Rule 25    statement -> var_inc
Rule 26    statement -> var_dec
Rule 27    statement -> print_statement
Rule 28    statement -> break_statement
Rule 29    statement -> sizeof_statement
Rule 30    statement -> and_statement
Rule 31    statement -> or_statement
Rule 32    and_statement -> comparison AND comparison
Rule 33    and_statement -> comparison AND TRUE
Rule 34    and_statement -> comparison AND FALSE
Rule 35    and_statement -> TRUE AND comparison
Rule 36    and_statement -> FALSE AND comparison
Rule 37    and_statement -> TRUE AND TRUE
Rule 38    and_statement -> TRUE AND FALSE
Rule 39    and_statement -> FALSE AND TRUE
Rule 40    and_statement -> FALSE AND FALSE
Rule 41    and_statement -> compare_id_value AND compare_id_value
Rule 42    and_statement -> compare_id_value AND TRUE
Rule 43    and_statement -> compare_id_value AND FALSE
Rule 44    and_statement -> compare_id_value AND comparison
Rule 45    and_statement -> comparison AND compare_id_value
Rule 46    and_statement -> TRUE AND compare_id_value
Rule 47    and_statement -> FALSE AND compare_id_value
Rule 48    or_statement -> comparison OR comparison
Rule 49    or_statement -> comparison OR TRUE
Rule 50    or_statement -> comparison OR FALSE
Rule 51    or_statement -> TRUE OR comparison
Rule 52    or_statement -> FALSE OR comparison
Rule 53    or_statement -> TRUE OR TRUE
Rule 54    or_statement -> TRUE OR FALSE
Rule 55    or_statement -> FALSE OR TRUE
Rule 56    or_statement -> FALSE OR FALSE
Rule 57    or_statement -> compare_id_value OR compare_id_value
Rule 58    or_statement -> compare_id_value OR TRUE
Rule 59    or_statement -> compare_id_value OR FALSE
Rule 60    or_statement -> compare_id_value OR comparison
Rule 61    or_statement -> comparison OR compare_id_value
Rule 62    or_statement -> TRUE OR compare_id_value
Rule 63    or_statement -> FALSE OR compare_id_value
Rule 64    var_assign -> ID EQUALS ID SEMICOL
Rule 65    var_assign -> ID EQUALS STRING SEMICOL
Rule 66    var_assign -> ID EQUALS NUMBER SEMICOL
Rule 67    var_assign -> ID EQUALS TRUE SEMICOL
Rule 68    var_assign -> ID EQUALS FALSE SEMICOL
Rule 69    var_assign -> ID EQUALS expression SEMICOL
Rule 70    var_inc -> ID PLUS PLUS SEMICOL
Rule 71    var_dec -> ID MINUS MINUS SEMICOL
Rule 72    var_statement -> CHAR ID EQUALS STRING SEMICOL
Rule 73    var_statement -> FLOATTYPE ID EQUALS NUMBER SEMICOL
Rule 74    var_statement -> INT ID EQUALS NUMBER SEMICOL
Rule 75    var_statement -> BOOL ID EQUALS TRUE SEMICOL
Rule 76    var_statement -> BOOL ID EQUALS FALSE SEMICOL
Rule 77    input_statement -> INT ID EQUALS INPUT LPAREN INT RPAREN SEMICOL
Rule 78    input_statement -> CHAR ID EQUALS INPUT LPAREN CHAR RPAREN SEMICOL
Rule 79    input_statement -> FLOATTYPE ID EQUALS INPUT LPAREN FLOATTYPE RPAREN SEMICOL
Rule 80    expression -> ID
Rule 81    term -> ID
Rule 82    factor -> ID
Rule 83    comparison -> expression GTH expression
Rule 84    comparison -> expression LTH expression
Rule 85    comparison -> expression GTHOREQUAL expression
Rule 86    comparison -> expression LTHOREQUAL expression
Rule 87    comparison -> expression EQUALEQUAL expression
Rule 88    comparison -> expression NOTEQUAL expression
Rule 89    compare_id_id -> ID GTH ID
Rule 90    compare_id_id -> ID LTH ID
Rule 91    compare_id_id -> ID GTHOREQUAL ID
Rule 92    compare_id_id -> ID LTHOREQUAL ID
Rule 93    compare_id_id -> ID EQUALEQUAL ID
Rule 94    compare_id_id -> ID NOTEQUAL ID
Rule 95    compare_id_value -> ID GTH expression
Rule 96    compare_id_value -> ID LTH expression
Rule 97    compare_id_value -> ID GTHOREQUAL expression
Rule 98    compare_id_value -> ID LTHOREQUAL expression
Rule 99    compare_id_value -> ID EQUALEQUAL expression
Rule 100   compare_id_value -> ID NOTEQUAL expression
Rule 101   bool_comparison -> ID EQUALEQUAL ID
Rule 102   bool_comparison -> ID EQUALEQUAL TRUE
Rule 103   bool_comparison -> ID EQUALEQUAL FALSE
Rule 104   bool_comparison -> ID NOTEQUAL ID
Rule 105   bool_comparison -> ID NOTEQUAL TRUE
Rule 106   bool_comparison -> ID NOTEQUAL FALSE
Rule 107   if_statement -> IF LPAREN comparison RPAREN LBRACE statements RBRACE
Rule 108   if_statement -> IF LPAREN compare_id_value RPAREN LBRACE statements RBRACE
Rule 109   if_statement -> IF LPAREN bool_comparison RPAREN LBRACE statements RBRACE
Rule 110   if_statement -> IF LPAREN and_statement RPAREN LBRACE statements RBRACE
Rule 111   if_statement -> IF LPAREN or_statement RPAREN LBRACE statements RBRACE
Rule 112   if_statement_elif -> IF RPAREN comparison LPAREN LBRACE statements RBRACE ELSE if_statement
Rule 113   if_statement -> IF LPAREN comparison RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
Rule 114   if_statement -> IF LPAREN bool_comparison RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
Rule 115   if_statement -> IF LPAREN compare_id_value RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
Rule 116   while_statement -> WHILE LPAREN comparison RPAREN LBRACE statements RBRACE
Rule 117   while_statement -> WHILE LPAREN TRUE RPAREN LBRACE statements RBRACE
Rule 118   while_statement -> WHILE LPAREN FALSE RPAREN LBRACE statements RBRACE
Rule 119   for_statement -> FOR LPAREN var_statement comparison SEMICOL var_inc RPAREN LBRACE statements RBRACE
Rule 120   break_statement -> BREAK SEMICOL
Rule 121   expression -> expression PLUS term
Rule 122   expression -> expression MINUS term
Rule 123   expression -> term
Rule 124   term -> term TIMES factor
Rule 125   term -> term DIVIDE factor
Rule 126   term -> term MODULO factor
Rule 127   term -> factor
Rule 128   factor -> NUMBER
Rule 129   factor -> LPAREN expression RPAREN
Rule 130   empty -> <empty>

Terminals, with rules where they appear

AND                  : 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
BOOL                 : 75 76
BREAK                : 120
CHAR                 : 72 78 78
CLASS                : 
COMMA                : 6 7 8
DIVIDE               : 125
ELSE                 : 112 113 114 115
EQUALEQUAL           : 87 93 99 101 102 103
EQUALS               : 64 65 66 67 68 69 72 73 74 75 76 77 78 79
FALSE                : 34 36 38 39 40 40 43 47 50 52 54 55 56 56 59 63 68 76 103 106 118
FLOATTYPE            : 73 79 79
FLOAT_CONST          : 
FOR                  : 119
FUNCTION             : 
GTH                  : 83 89 95
GTHOREQUAL           : 85 91 97
ID                   : 5 7 8 10 64 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 89 89 90 90 91 91 92 92 93 93 94 94 95 96 97 98 99 100 101 101 102 103 104 104 105 106
IF                   : 107 108 109 110 111 112 113 114 115
INPUT                : 77 78 79
INT                  : 74 77 77
INT_CONST            : 
LBRACE               : 107 108 109 110 111 112 113 113 114 114 115 115 116 117 118 119
LPAREN               : 3 4 5 6 7 8 9 10 77 78 79 107 108 109 110 111 112 113 114 115 116 117 118 119 129
LTH                  : 84 90 96
LTHOREQUAL           : 86 92 98
MINUS                : 71 71 122
MODULO               : 126
NOTEQUAL             : 88 94 100 104 105 106
NUMBER               : 66 73 74 128
OR                   : 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
PLUS                 : 70 70 121
PRINT                : 3 4
RBRACE               : 107 108 109 110 111 112 113 113 114 114 115 115 116 117 118 119
RETURN               : 
RPAREN               : 3 4 5 6 7 8 9 10 77 78 79 107 108 109 110 111 112 113 114 115 116 117 118 119 129
SEMICOL              : 3 4 5 6 7 8 9 10 11 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 119 120
SIZEOF               : 9 10
STRING               : 4 6 6 7 8 9 65 72
TIMES                : 124
TRUE                 : 33 35 37 37 38 39 42 46 49 51 53 53 54 55 58 62 67 75 102 105 117
UNION                : 6 7 8
VAR_TYPE             : 5
WHILE                : 116 117 118
error                : 
owyar                : 

Nonterminals, with rules where they appear

and_statement        : 30 110
bool_comparison      : 22 109 114
break_statement      : 28
compare_id_id        : 21
compare_id_value     : 20 41 41 42 43 44 45 46 47 57 57 58 59 60 61 62 63 108 115
comparison           : 19 32 32 33 34 35 36 44 45 48 48 49 50 51 52 60 61 107 112 113 116 119
empty                : 
expression           : 3 11 69 83 83 84 84 85 85 86 86 87 87 88 88 95 96 97 98 99 100 121 122 129
factor               : 124 125 126 127
for_statement        : 15
if_statement         : 13 112
if_statement_elif    : 12
input_statement      : 17
or_statement         : 31 111
print_statement      : 27
sizeof_statement     : 29
statement            : 1 2
statements           : 1 107 108 109 110 111 112 113 113 114 114 115 115 116 117 118 119 0
term                 : 121 122 123 124 125 126
union_statement      : 18
var_assign           : 24
var_dec              : 26
var_inc              : 25 119
var_statement        : 23 119
vartype_statement    : 16
while_statement      : 14

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statements statement
    (2) statements -> . statement
    (11) statement -> . expression SEMICOL
    (12) statement -> . if_statement_elif
    (13) statement -> . if_statement
    (14) statement -> . while_statement
    (15) statement -> . for_statement
    (16) statement -> . vartype_statement
    (17) statement -> . input_statement
    (18) statement -> . union_statement
    (19) statement -> . comparison
    (20) statement -> . compare_id_value
    (21) statement -> . compare_id_id
    (22) statement -> . bool_comparison
    (23) statement -> . var_statement
    (24) statement -> . var_assign
    (25) statement -> . var_inc
    (26) statement -> . var_dec
    (27) statement -> . print_statement
    (28) statement -> . break_statement
    (29) statement -> . sizeof_statement
    (30) statement -> . and_statement
    (31) statement -> . or_statement
    (80) expression -> . ID
    (121) expression -> . expression PLUS term
    (122) expression -> . expression MINUS term
    (123) expression -> . term
    (112) if_statement_elif -> . IF RPAREN comparison LPAREN LBRACE statements RBRACE ELSE if_statement
    (107) if_statement -> . IF LPAREN comparison RPAREN LBRACE statements RBRACE
    (108) if_statement -> . IF LPAREN compare_id_value RPAREN LBRACE statements RBRACE
    (109) if_statement -> . IF LPAREN bool_comparison RPAREN LBRACE statements RBRACE
    (110) if_statement -> . IF LPAREN and_statement RPAREN LBRACE statements RBRACE
    (111) if_statement -> . IF LPAREN or_statement RPAREN LBRACE statements RBRACE
    (113) if_statement -> . IF LPAREN comparison RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (114) if_statement -> . IF LPAREN bool_comparison RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (115) if_statement -> . IF LPAREN compare_id_value RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (116) while_statement -> . WHILE LPAREN comparison RPAREN LBRACE statements RBRACE
    (117) while_statement -> . WHILE LPAREN TRUE RPAREN LBRACE statements RBRACE
    (118) while_statement -> . WHILE LPAREN FALSE RPAREN LBRACE statements RBRACE
    (119) for_statement -> . FOR LPAREN var_statement comparison SEMICOL var_inc RPAREN LBRACE statements RBRACE
    (5) vartype_statement -> . VAR_TYPE LPAREN ID RPAREN SEMICOL
    (77) input_statement -> . INT ID EQUALS INPUT LPAREN INT RPAREN SEMICOL
    (78) input_statement -> . CHAR ID EQUALS INPUT LPAREN CHAR RPAREN SEMICOL
    (79) input_statement -> . FLOATTYPE ID EQUALS INPUT LPAREN FLOATTYPE RPAREN SEMICOL
    (6) union_statement -> . UNION LPAREN STRING COMMA STRING RPAREN SEMICOL
    (7) union_statement -> . UNION LPAREN STRING COMMA ID RPAREN SEMICOL
    (8) union_statement -> . UNION LPAREN ID COMMA STRING RPAREN SEMICOL
    (83) comparison -> . expression GTH expression
    (84) comparison -> . expression LTH expression
    (85) comparison -> . expression GTHOREQUAL expression
    (86) comparison -> . expression LTHOREQUAL expression
    (87) comparison -> . expression EQUALEQUAL expression
    (88) comparison -> . expression NOTEQUAL expression
    (95) compare_id_value -> . ID GTH expression
    (96) compare_id_value -> . ID LTH expression
    (97) compare_id_value -> . ID GTHOREQUAL expression
    (98) compare_id_value -> . ID LTHOREQUAL expression
    (99) compare_id_value -> . ID EQUALEQUAL expression
    (100) compare_id_value -> . ID NOTEQUAL expression
    (89) compare_id_id -> . ID GTH ID
    (90) compare_id_id -> . ID LTH ID
    (91) compare_id_id -> . ID GTHOREQUAL ID
    (92) compare_id_id -> . ID LTHOREQUAL ID
    (93) compare_id_id -> . ID EQUALEQUAL ID
    (94) compare_id_id -> . ID NOTEQUAL ID
    (101) bool_comparison -> . ID EQUALEQUAL ID
    (102) bool_comparison -> . ID EQUALEQUAL TRUE
    (103) bool_comparison -> . ID EQUALEQUAL FALSE
    (104) bool_comparison -> . ID NOTEQUAL ID
    (105) bool_comparison -> . ID NOTEQUAL TRUE
    (106) bool_comparison -> . ID NOTEQUAL FALSE
    (72) var_statement -> . CHAR ID EQUALS STRING SEMICOL
    (73) var_statement -> . FLOATTYPE ID EQUALS NUMBER SEMICOL
    (74) var_statement -> . INT ID EQUALS NUMBER SEMICOL
    (75) var_statement -> . BOOL ID EQUALS TRUE SEMICOL
    (76) var_statement -> . BOOL ID EQUALS FALSE SEMICOL
    (64) var_assign -> . ID EQUALS ID SEMICOL
    (65) var_assign -> . ID EQUALS STRING SEMICOL
    (66) var_assign -> . ID EQUALS NUMBER SEMICOL
    (67) var_assign -> . ID EQUALS TRUE SEMICOL
    (68) var_assign -> . ID EQUALS FALSE SEMICOL
    (69) var_assign -> . ID EQUALS expression SEMICOL
    (70) var_inc -> . ID PLUS PLUS SEMICOL
    (71) var_dec -> . ID MINUS MINUS SEMICOL
    (3) print_statement -> . PRINT LPAREN expression RPAREN SEMICOL
    (4) print_statement -> . PRINT LPAREN STRING RPAREN SEMICOL
    (120) break_statement -> . BREAK SEMICOL
    (9) sizeof_statement -> . SIZEOF LPAREN STRING RPAREN SEMICOL
    (10) sizeof_statement -> . SIZEOF LPAREN ID RPAREN SEMICOL
    (32) and_statement -> . comparison AND comparison
    (33) and_statement -> . comparison AND TRUE
    (34) and_statement -> . comparison AND FALSE
    (35) and_statement -> . TRUE AND comparison
    (36) and_statement -> . FALSE AND comparison
    (37) and_statement -> . TRUE AND TRUE
    (38) and_statement -> . TRUE AND FALSE
    (39) and_statement -> . FALSE AND TRUE
    (40) and_statement -> . FALSE AND FALSE
    (41) and_statement -> . compare_id_value AND compare_id_value
    (42) and_statement -> . compare_id_value AND TRUE
    (43) and_statement -> . compare_id_value AND FALSE
    (44) and_statement -> . compare_id_value AND comparison
    (45) and_statement -> . comparison AND compare_id_value
    (46) and_statement -> . TRUE AND compare_id_value
    (47) and_statement -> . FALSE AND compare_id_value
    (48) or_statement -> . comparison OR comparison
    (49) or_statement -> . comparison OR TRUE
    (50) or_statement -> . comparison OR FALSE
    (51) or_statement -> . TRUE OR comparison
    (52) or_statement -> . FALSE OR comparison
    (53) or_statement -> . TRUE OR TRUE
    (54) or_statement -> . TRUE OR FALSE
    (55) or_statement -> . FALSE OR TRUE
    (56) or_statement -> . FALSE OR FALSE
    (57) or_statement -> . compare_id_value OR compare_id_value
    (58) or_statement -> . compare_id_value OR TRUE
    (59) or_statement -> . compare_id_value OR FALSE
    (60) or_statement -> . compare_id_value OR comparison
    (61) or_statement -> . comparison OR compare_id_value
    (62) or_statement -> . TRUE OR compare_id_value
    (63) or_statement -> . FALSE OR compare_id_value
    (81) term -> . ID
    (124) term -> . term TIMES factor
    (125) term -> . term DIVIDE factor
    (126) term -> . term MODULO factor
    (127) term -> . factor
    (82) factor -> . ID
    (128) factor -> . NUMBER
    (129) factor -> . LPAREN expression RPAREN

    ID              shift and go to state 24
    IF              shift and go to state 26
    WHILE           shift and go to state 28
    FOR             shift and go to state 31
    VAR_TYPE        shift and go to state 32
    INT             shift and go to state 33
    CHAR            shift and go to state 34
    FLOATTYPE       shift and go to state 35
    UNION           shift and go to state 36
    BOOL            shift and go to state 38
    PRINT           shift and go to state 39
    BREAK           shift and go to state 40
    SIZEOF          shift and go to state 41
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    NUMBER          shift and go to state 37
    LPAREN          shift and go to state 27

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    expression                     shift and go to state 3
    if_statement_elif              shift and go to state 4
    if_statement                   shift and go to state 5
    while_statement                shift and go to state 6
    for_statement                  shift and go to state 7
    vartype_statement              shift and go to state 8
    input_statement                shift and go to state 9
    union_statement                shift and go to state 10
    comparison                     shift and go to state 11
    compare_id_value               shift and go to state 12
    compare_id_id                  shift and go to state 13
    bool_comparison                shift and go to state 14
    var_statement                  shift and go to state 15
    var_assign                     shift and go to state 16
    var_inc                        shift and go to state 17
    var_dec                        shift and go to state 18
    print_statement                shift and go to state 19
    break_statement                shift and go to state 20
    sizeof_statement               shift and go to state 21
    and_statement                  shift and go to state 22
    or_statement                   shift and go to state 23
    term                           shift and go to state 25
    factor                         shift and go to state 42

state 1

    (0) S' -> statements .
    (1) statements -> statements . statement
    (11) statement -> . expression SEMICOL
    (12) statement -> . if_statement_elif
    (13) statement -> . if_statement
    (14) statement -> . while_statement
    (15) statement -> . for_statement
    (16) statement -> . vartype_statement
    (17) statement -> . input_statement
    (18) statement -> . union_statement
    (19) statement -> . comparison
    (20) statement -> . compare_id_value
    (21) statement -> . compare_id_id
    (22) statement -> . bool_comparison
    (23) statement -> . var_statement
    (24) statement -> . var_assign
    (25) statement -> . var_inc
    (26) statement -> . var_dec
    (27) statement -> . print_statement
    (28) statement -> . break_statement
    (29) statement -> . sizeof_statement
    (30) statement -> . and_statement
    (31) statement -> . or_statement
    (80) expression -> . ID
    (121) expression -> . expression PLUS term
    (122) expression -> . expression MINUS term
    (123) expression -> . term
    (112) if_statement_elif -> . IF RPAREN comparison LPAREN LBRACE statements RBRACE ELSE if_statement
    (107) if_statement -> . IF LPAREN comparison RPAREN LBRACE statements RBRACE
    (108) if_statement -> . IF LPAREN compare_id_value RPAREN LBRACE statements RBRACE
    (109) if_statement -> . IF LPAREN bool_comparison RPAREN LBRACE statements RBRACE
    (110) if_statement -> . IF LPAREN and_statement RPAREN LBRACE statements RBRACE
    (111) if_statement -> . IF LPAREN or_statement RPAREN LBRACE statements RBRACE
    (113) if_statement -> . IF LPAREN comparison RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (114) if_statement -> . IF LPAREN bool_comparison RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (115) if_statement -> . IF LPAREN compare_id_value RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (116) while_statement -> . WHILE LPAREN comparison RPAREN LBRACE statements RBRACE
    (117) while_statement -> . WHILE LPAREN TRUE RPAREN LBRACE statements RBRACE
    (118) while_statement -> . WHILE LPAREN FALSE RPAREN LBRACE statements RBRACE
    (119) for_statement -> . FOR LPAREN var_statement comparison SEMICOL var_inc RPAREN LBRACE statements RBRACE
    (5) vartype_statement -> . VAR_TYPE LPAREN ID RPAREN SEMICOL
    (77) input_statement -> . INT ID EQUALS INPUT LPAREN INT RPAREN SEMICOL
    (78) input_statement -> . CHAR ID EQUALS INPUT LPAREN CHAR RPAREN SEMICOL
    (79) input_statement -> . FLOATTYPE ID EQUALS INPUT LPAREN FLOATTYPE RPAREN SEMICOL
    (6) union_statement -> . UNION LPAREN STRING COMMA STRING RPAREN SEMICOL
    (7) union_statement -> . UNION LPAREN STRING COMMA ID RPAREN SEMICOL
    (8) union_statement -> . UNION LPAREN ID COMMA STRING RPAREN SEMICOL
    (83) comparison -> . expression GTH expression
    (84) comparison -> . expression LTH expression
    (85) comparison -> . expression GTHOREQUAL expression
    (86) comparison -> . expression LTHOREQUAL expression
    (87) comparison -> . expression EQUALEQUAL expression
    (88) comparison -> . expression NOTEQUAL expression
    (95) compare_id_value -> . ID GTH expression
    (96) compare_id_value -> . ID LTH expression
    (97) compare_id_value -> . ID GTHOREQUAL expression
    (98) compare_id_value -> . ID LTHOREQUAL expression
    (99) compare_id_value -> . ID EQUALEQUAL expression
    (100) compare_id_value -> . ID NOTEQUAL expression
    (89) compare_id_id -> . ID GTH ID
    (90) compare_id_id -> . ID LTH ID
    (91) compare_id_id -> . ID GTHOREQUAL ID
    (92) compare_id_id -> . ID LTHOREQUAL ID
    (93) compare_id_id -> . ID EQUALEQUAL ID
    (94) compare_id_id -> . ID NOTEQUAL ID
    (101) bool_comparison -> . ID EQUALEQUAL ID
    (102) bool_comparison -> . ID EQUALEQUAL TRUE
    (103) bool_comparison -> . ID EQUALEQUAL FALSE
    (104) bool_comparison -> . ID NOTEQUAL ID
    (105) bool_comparison -> . ID NOTEQUAL TRUE
    (106) bool_comparison -> . ID NOTEQUAL FALSE
    (72) var_statement -> . CHAR ID EQUALS STRING SEMICOL
    (73) var_statement -> . FLOATTYPE ID EQUALS NUMBER SEMICOL
    (74) var_statement -> . INT ID EQUALS NUMBER SEMICOL
    (75) var_statement -> . BOOL ID EQUALS TRUE SEMICOL
    (76) var_statement -> . BOOL ID EQUALS FALSE SEMICOL
    (64) var_assign -> . ID EQUALS ID SEMICOL
    (65) var_assign -> . ID EQUALS STRING SEMICOL
    (66) var_assign -> . ID EQUALS NUMBER SEMICOL
    (67) var_assign -> . ID EQUALS TRUE SEMICOL
    (68) var_assign -> . ID EQUALS FALSE SEMICOL
    (69) var_assign -> . ID EQUALS expression SEMICOL
    (70) var_inc -> . ID PLUS PLUS SEMICOL
    (71) var_dec -> . ID MINUS MINUS SEMICOL
    (3) print_statement -> . PRINT LPAREN expression RPAREN SEMICOL
    (4) print_statement -> . PRINT LPAREN STRING RPAREN SEMICOL
    (120) break_statement -> . BREAK SEMICOL
    (9) sizeof_statement -> . SIZEOF LPAREN STRING RPAREN SEMICOL
    (10) sizeof_statement -> . SIZEOF LPAREN ID RPAREN SEMICOL
    (32) and_statement -> . comparison AND comparison
    (33) and_statement -> . comparison AND TRUE
    (34) and_statement -> . comparison AND FALSE
    (35) and_statement -> . TRUE AND comparison
    (36) and_statement -> . FALSE AND comparison
    (37) and_statement -> . TRUE AND TRUE
    (38) and_statement -> . TRUE AND FALSE
    (39) and_statement -> . FALSE AND TRUE
    (40) and_statement -> . FALSE AND FALSE
    (41) and_statement -> . compare_id_value AND compare_id_value
    (42) and_statement -> . compare_id_value AND TRUE
    (43) and_statement -> . compare_id_value AND FALSE
    (44) and_statement -> . compare_id_value AND comparison
    (45) and_statement -> . comparison AND compare_id_value
    (46) and_statement -> . TRUE AND compare_id_value
    (47) and_statement -> . FALSE AND compare_id_value
    (48) or_statement -> . comparison OR comparison
    (49) or_statement -> . comparison OR TRUE
    (50) or_statement -> . comparison OR FALSE
    (51) or_statement -> . TRUE OR comparison
    (52) or_statement -> . FALSE OR comparison
    (53) or_statement -> . TRUE OR TRUE
    (54) or_statement -> . TRUE OR FALSE
    (55) or_statement -> . FALSE OR TRUE
    (56) or_statement -> . FALSE OR FALSE
    (57) or_statement -> . compare_id_value OR compare_id_value
    (58) or_statement -> . compare_id_value OR TRUE
    (59) or_statement -> . compare_id_value OR FALSE
    (60) or_statement -> . compare_id_value OR comparison
    (61) or_statement -> . comparison OR compare_id_value
    (62) or_statement -> . TRUE OR compare_id_value
    (63) or_statement -> . FALSE OR compare_id_value
    (81) term -> . ID
    (124) term -> . term TIMES factor
    (125) term -> . term DIVIDE factor
    (126) term -> . term MODULO factor
    (127) term -> . factor
    (82) factor -> . ID
    (128) factor -> . NUMBER
    (129) factor -> . LPAREN expression RPAREN

    ID              shift and go to state 24
    IF              shift and go to state 26
    WHILE           shift and go to state 28
    FOR             shift and go to state 31
    VAR_TYPE        shift and go to state 32
    INT             shift and go to state 33
    CHAR            shift and go to state 34
    FLOATTYPE       shift and go to state 35
    UNION           shift and go to state 36
    BOOL            shift and go to state 38
    PRINT           shift and go to state 39
    BREAK           shift and go to state 40
    SIZEOF          shift and go to state 41
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    NUMBER          shift and go to state 37
    LPAREN          shift and go to state 27

    statement                      shift and go to state 43
    expression                     shift and go to state 3
    if_statement_elif              shift and go to state 4
    if_statement                   shift and go to state 5
    while_statement                shift and go to state 6
    for_statement                  shift and go to state 7
    vartype_statement              shift and go to state 8
    input_statement                shift and go to state 9
    union_statement                shift and go to state 10
    comparison                     shift and go to state 11
    compare_id_value               shift and go to state 12
    compare_id_id                  shift and go to state 13
    bool_comparison                shift and go to state 14
    var_statement                  shift and go to state 15
    var_assign                     shift and go to state 16
    var_inc                        shift and go to state 17
    var_dec                        shift and go to state 18
    print_statement                shift and go to state 19
    break_statement                shift and go to state 20
    sizeof_statement               shift and go to state 21
    and_statement                  shift and go to state 22
    or_statement                   shift and go to state 23
    term                           shift and go to state 25
    factor                         shift and go to state 42

state 2

    (2) statements -> statement .

    ID              reduce using rule 2 (statements -> statement .)
    IF              reduce using rule 2 (statements -> statement .)
    WHILE           reduce using rule 2 (statements -> statement .)
    FOR             reduce using rule 2 (statements -> statement .)
    VAR_TYPE        reduce using rule 2 (statements -> statement .)
    INT             reduce using rule 2 (statements -> statement .)
    CHAR            reduce using rule 2 (statements -> statement .)
    FLOATTYPE       reduce using rule 2 (statements -> statement .)
    UNION           reduce using rule 2 (statements -> statement .)
    BOOL            reduce using rule 2 (statements -> statement .)
    PRINT           reduce using rule 2 (statements -> statement .)
    BREAK           reduce using rule 2 (statements -> statement .)
    SIZEOF          reduce using rule 2 (statements -> statement .)
    TRUE            reduce using rule 2 (statements -> statement .)
    FALSE           reduce using rule 2 (statements -> statement .)
    NUMBER          reduce using rule 2 (statements -> statement .)
    LPAREN          reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)
    RBRACE          reduce using rule 2 (statements -> statement .)


state 3

    (11) statement -> expression . SEMICOL
    (121) expression -> expression . PLUS term
    (122) expression -> expression . MINUS term
    (83) comparison -> expression . GTH expression
    (84) comparison -> expression . LTH expression
    (85) comparison -> expression . GTHOREQUAL expression
    (86) comparison -> expression . LTHOREQUAL expression
    (87) comparison -> expression . EQUALEQUAL expression
    (88) comparison -> expression . NOTEQUAL expression

    SEMICOL         shift and go to state 44
    PLUS            shift and go to state 45
    MINUS           shift and go to state 46
    GTH             shift and go to state 47
    LTH             shift and go to state 48
    GTHOREQUAL      shift and go to state 49
    LTHOREQUAL      shift and go to state 50
    EQUALEQUAL      shift and go to state 51
    NOTEQUAL        shift and go to state 52


state 4

    (12) statement -> if_statement_elif .

    ID              reduce using rule 12 (statement -> if_statement_elif .)
    IF              reduce using rule 12 (statement -> if_statement_elif .)
    WHILE           reduce using rule 12 (statement -> if_statement_elif .)
    FOR             reduce using rule 12 (statement -> if_statement_elif .)
    VAR_TYPE        reduce using rule 12 (statement -> if_statement_elif .)
    INT             reduce using rule 12 (statement -> if_statement_elif .)
    CHAR            reduce using rule 12 (statement -> if_statement_elif .)
    FLOATTYPE       reduce using rule 12 (statement -> if_statement_elif .)
    UNION           reduce using rule 12 (statement -> if_statement_elif .)
    BOOL            reduce using rule 12 (statement -> if_statement_elif .)
    PRINT           reduce using rule 12 (statement -> if_statement_elif .)
    BREAK           reduce using rule 12 (statement -> if_statement_elif .)
    SIZEOF          reduce using rule 12 (statement -> if_statement_elif .)
    TRUE            reduce using rule 12 (statement -> if_statement_elif .)
    FALSE           reduce using rule 12 (statement -> if_statement_elif .)
    NUMBER          reduce using rule 12 (statement -> if_statement_elif .)
    LPAREN          reduce using rule 12 (statement -> if_statement_elif .)
    $end            reduce using rule 12 (statement -> if_statement_elif .)
    RBRACE          reduce using rule 12 (statement -> if_statement_elif .)


state 5

    (13) statement -> if_statement .

    ID              reduce using rule 13 (statement -> if_statement .)
    IF              reduce using rule 13 (statement -> if_statement .)
    WHILE           reduce using rule 13 (statement -> if_statement .)
    FOR             reduce using rule 13 (statement -> if_statement .)
    VAR_TYPE        reduce using rule 13 (statement -> if_statement .)
    INT             reduce using rule 13 (statement -> if_statement .)
    CHAR            reduce using rule 13 (statement -> if_statement .)
    FLOATTYPE       reduce using rule 13 (statement -> if_statement .)
    UNION           reduce using rule 13 (statement -> if_statement .)
    BOOL            reduce using rule 13 (statement -> if_statement .)
    PRINT           reduce using rule 13 (statement -> if_statement .)
    BREAK           reduce using rule 13 (statement -> if_statement .)
    SIZEOF          reduce using rule 13 (statement -> if_statement .)
    TRUE            reduce using rule 13 (statement -> if_statement .)
    FALSE           reduce using rule 13 (statement -> if_statement .)
    NUMBER          reduce using rule 13 (statement -> if_statement .)
    LPAREN          reduce using rule 13 (statement -> if_statement .)
    $end            reduce using rule 13 (statement -> if_statement .)
    RBRACE          reduce using rule 13 (statement -> if_statement .)


state 6

    (14) statement -> while_statement .
